# Hello-Cmake

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  file_config.h.in  run.sh
src/: CMakeLists.txt  main.cpp
src/Adder/: CMakeLists.txt  add.cpp
